# my-botorch-sandbox

./: .gitignore  pyproject.toml  日記.md
sandbox2/: 効率のいい網羅サンプリング.py
src/: compare_methos_analysis.py  compare_methos_analysis_2.py  fb.py  optuna_analysis.py  salib_analysis.py  sklearn_analysis.py  statsmodel_analysis.py
src/250621_色々な分析手法/: 最適化.py  色々な分析手法.py  関数呼び.py  関数版_色々な分析手法.py
